# Dahu

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/attributes/: CMakeLists.txt  MSER-cli.cpp  MSER.hpp  MSERArgparser.cpp  MSERArgparser.hpp  Makefile  argparser.hpp  attributes.cpp  attributes.hpp  bk_mser-cli.cpp  cMSER.hpp  cMeaningFullNess.hpp  curvature.cpp  curvature.hpp  gradient_magnitude-cli.cpp  gradient_magnitude-patternspec.cpp  gradient_magnitude.hpp  meaningfullness-cli.cpp  meaningfullness.hpp  meaningfullnessArgparser.cpp  meaningfullnessArgparser.hpp  o.ppm  stat.cpp
apps/clattice/: CMakeLists.txt  Makefile  clattice.cpp  cuts.hpp  export.hpp  make_graph.hpp  relation.hpp  shape.hpp
apps/dahu/: CMakeLists.txt  dahu_lab.cpp  dahu_seed.cpp  dahu_seed_interative.cpp  dahu_seed_queue.cpp  dahu_seed_saliency.cpp  dahu_seed_seg.cpp  dahu_updown.cpp  dahu_updown_folder.cpp  dahu_updown_folder2015.cpp  seed_GOP.cpp  shortestpath.cpp  test_shortest_path.cpp  test_shortest_path1.cpp
apps/distancebased/: Makefile  compute_tree_distance.hpp  grainfilter_distancebased.cpp
apps/fastmbd/: CMakeLists.txt~  fast_dahu.cpp  fast_dahu_border.cpp  fast_dahu_border_color.cpp  fast_dahu_border_color_folder.cpp  fastmbd.cpp  fastmbd_folder.cpp  immerse.hpp  queue_waterflow_mbd.cpp  range.hpp  waterflow_mbd.cpp  waterflow_mbd_folder.cpp
apps/g2/: CMakeLists.txt  Makefile  compute_ctos-cli.cpp  compute_ctos.cpp  compute_ctos.hpp  compute_g2.cpp  compute_g2.hpp  g2-maxdepth.cpp  g2-maxtree.cpp  g2-no-overlap.cpp  g2-no-overlap2.cpp  g2.cpp  g2.hpp  reconstruct.hpp  remove_parent_relation.hpp  routines.cpp  routines.hpp  satmaxtree-cli.cpp  satmaxtree.cpp  satmaxtree.hpp  types.hpp
apps/hierachical_seg-gui/: CMakeLists.txt  brush.cpp  brush.hpp  hierachical_seg-cli.cpp  hierachical_seg-gui.cpp  supervised-cli.cpp
apps/hyperspec/: CMakeLists.txt  profiles.hpp  profiles_from_marginal_tos.cpp  profiles_from_tos.cpp
apps/imview/: CMakeLists.txt  imview.cpp
apps/kmax_distance/: CMakeLists.txt  kmax_distance_border.cpp  kmax_distance_color.cpp
apps/maxtree_comparison/: CMakeLists.txt  bench.py  bench.sh  bench_maxtree.cpp  bench_maxtree_algorithm.hpp  bench_parallel_hqueue.cpp  bench_parallel_pqueue.cpp  bench_parallel_ufind.cpp  bench_parallel_ufind_line.cpp  bench_parallel_ufindrank.cpp  bench_serial_hqueue.cpp  bench_serial_najman.cpp  bench_serial_pqueue.cpp  bench_serial_ufind.cpp  bench_serial_ufindrank.cpp
apps/misc/: CMakeLists.txt  print_tos_stat.cpp  psnr.cpp  reconstruct_from_tree.cpp
apps/mumford_shah_on_tree/: CMakeLists.txt~  dahu_distance_updown_4_border.cpp  dahu_distance_updown_4_borders_test.cpp  dahu_distance_updown_border.cpp  dahu_distance_updown_border_test.cpp  dahu_slic_full.cpp  dahu_slic_full_4_bors.cpp  dahuboundary.cpp~  dahudistance.cpp  dahudistancefull.cpp  minimumbarier.cpp  mumford_shah_on_tree.cpp  mumford_shah_on_tree.hpp  mumford_shah_on_tree_full.cpp  mumford_shah_on_tree_full_bk.cpp  mumford_shah_slic.cpp  saliency_map_mumford_ctos.cpp  seed_GOP.cpp  test_path.cpp  test_tree.cpp  tree_color_test.cpp
apps/papier/: CMakeLists.txt  dahu_bordure_vs_4_borders.cpp  dahu_color_tree.cpp  dahu_color_tree_4borders_priority.cpp  dahu_color_tree_priorityqueue.cpp  dahu_color_tree_queue.cpp  dahu_gray_tree.cpp  dahu_lab_tree.cpp  dahu_mtos_vs_tos.cpp  dahu_mtos_vs_tos_lab.cpp  dahu_path_cost.cpp  dahu_vs_fast_mbd.cpp  distance_2_points.cpp  eval_speed.cpp  fast_dahu_color.cpp  fast_dahu_gray.cpp  fast_mbd.cpp  fast_mbd_color.cpp  fast_water_flow_mbd_color_shortest_path.cpp  fast_waterflow_mbd.cpp  fast_waterflow_mbd_color.cpp  function.hpp  immerse.hpp  inter_intra_distance.cpp  mbd_mst.cpp  mbd_mst_color.cpp  random_seeded_dahu.cpp  roi.cpp  shortest_path_mbd_methods.cpp  shortest_path_tree_vs_image.cpp  synthetic_image_segmentation_errors.cpp
apps/qcm/: Makefile  qcm.cpp  qcm.py
apps/saliency/: CMakeLists.txt  closure.hpp  dispsaliency.cpp  dispsaliency.hpp  extinction.hpp  saliency.cpp  saliency.hpp
apps/segmentation/: CMakeLists.txt~  segment_node_tos.cpp  segmentation_gradient.cpp
apps/simplification/: CMakeLists.txt  simplify.hpp  simplify_cluminance.cpp  simplify_color.cpp  simplify_gray.cpp
apps/slic/: CMakeLists.txt~  dahu_slic.cpp  dahudistance_slic.cpp  mtos.cpp  range_sp.hpp  slic.cpp  tos.cpp
apps/supervised-gui/: CMakeLists.txt  automatic.cpp  brush.cpp  brush.hpp  compute_distance.hpp  constants.hpp  generate_res.cpp  myheap.hpp  nettoyage.cpp  supervised-cli-multi.cpp  supervised-gui-3c.cpp
apps/tests/: CMakeLists.txt
apps/theo/: CMakeLists.txt  ctos_grainfilter.cpp
apps/tos/: Kinterpolate.hpp  Makefile  addborder.hpp  colorToSGrad.cpp  colorToSGrad.hpp  compute_attribute.hpp  croutines.hpp  curvature.cpp  curvature.hpp  dijkstra.cpp  display_tos.cpp  distances.cpp  gradient.cpp  gradient.hpp  grainfilter.cpp  k12k0.cpp  lexico_grainfilter.cpp  libtos.cpp  libtos.hpp  marginal_cf.cpp  marginalfilter.cpp  mumford_shah.hpp  objdetection.cpp  objdetection.hpp  objdetection_gray.cpp  pgm_objdetection.cpp  pgm_objdetection_mser.cpp  ppm_objdetection.cpp  ppm_objdetection_mser.cpp  rgbgrainfilter.cpp  routines.cpp  routines.hpp  set_mean_on_nodes.hpp  shape_similarity.hpp  simplify.cpp  testLSH.cpp  thicken.cpp  thicken.hpp  topology.hpp  tos.cpp  (+1 more)
apps/tosgui/: CMakeLists.txt  attribute.cpp  attribute.hpp  dispatcher.cpp  dispatcher.hpp  filterer.hpp  plotwindow.cpp  plotwindow.hpp  qattribute.cpp  qattribute.hpp  toscgui.cpp  tosgui.cpp
cli/: CMakeLists.txt  area_close.cpp  area_fast_close.cpp  closing_by_reconstruction.cpp  decompose_channels.cpp  dilate.cpp  grain_filter.cpp  lab2rgb.cpp  leveling.cpp  recompose_channels.cpp  rgb2lab.cpp
tests/accu/: CMakeLists.txt  composite_accumulator.cpp  count.cpp  infsup.cpp  max_elements.cpp  mean.cpp  min_elements.cpp  moment_of_inertia.cpp  sum.cpp
tests/core/: CMakeLists.txt  ndimage.cpp  win2d.cpp
tests/morpho/: CMakeLists.txt  dilate.cpp  erode.cpp  extinction.cpp  gradient.cpp  maxtree.cpp  maxtree_hqueue.cpp  maxtree_ufind.cpp  opening.cpp  saturate.cpp
(+525 files in other folders)
