project(apps)
add_subdirectory(tests)
add_subdirectory(imview)
add_subdirectory(maxtree_comparison)

add_subdirectory(attributes)
add_subdirectory(simplification)
add_subdirectory(clattice)
add_subdirectory(g2)
add_subdirectory(mumford_shah_on_tree)
add_subdirectory(misc)
add_subdirectory(theo)
add_subdirectory(tosgui)
add_subdirectory(saliency)
add_subdirectory(supervised-gui)
add_subdirectory(hierachical_seg-gui)
add_subdirectory(hyperspec)
add_subdirectory(dahu)
add_subdirectory(slic)
add_subdirectory(fastmbd)
add_subdirectory(papier)
add_subdirectory(kmax_distance)
add_subdirectory(segmentation)
