add_executable(sum sum.cpp)
add_executable(count count.cpp)
add_executable(mean mean.cpp)
add_executable(infsup infsup.cpp)
add_executable(composite_accumulator composite_accumulator.cpp)
add_executable(min_elements min_elements.cpp)
add_executable(max_elements max_elements.cpp)
add_executable(moment_of_inertia moment_of_inertia.cpp)

add_core_test(sum sum)
add_core_test(infsup infsup)
add_core_test(count count)
add_core_test(mean mean)
add_core_test(min_elements min_elements)
add_core_test(max_elements max_elements)
add_core_test(composite_accumulator composite_accumulator)
add_core_test(moment_of_inertia moment_of_inertia)
